# srag

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  config.example.toml  format.sh  install.sh  lint.sh  test.sh  uninstall.sh
.github/workflows/: ci.yml
crates/srag-common/: Cargo.toml
crates/srag-common/src/: error.rs  lib.rs  types.rs
crates/srag-common/tests/: chunk_tests.rs  jsonrpc_tests.rs  language_tests.rs  result_types_tests.rs
crates/srag-core/: Cargo.toml
crates/srag-core/src/: main.rs
crates/srag-core/src/chunking/: config_chunker.rs  injection_scanner.rs  line_chunker.rs  mod.rs  tree_sitter_chunker.rs
crates/srag-core/src/chunking/call_graph/: calls.rs  definitions.rs  mod.rs
crates/srag-core/src/chunking/config_chunker/: chunker_env.rs  chunker_json.rs  chunker_toml.rs  chunker_yaml.rs  mod.rs
crates/srag-core/src/cli/: chat_cmd.rs  config_cmd.rs  index_cmd.rs  mod.rs  query_cmd.rs  remove_cmd.rs  setup_cmd.rs  status_cmd.rs  sync_cmd.rs  update_cmd.rs  watch_cmd.rs
crates/srag-core/src/cli/mcp/: helpers.rs  mod.rs  params.rs
crates/srag-core/src/config/: mod.rs  sections.rs
crates/srag-core/src/discovery/: mod.rs
crates/srag-core/src/index/: hnsw.rs  mod.rs
crates/srag-core/src/index/store/: mod.rs  store_callgraph.rs  store_chunks.rs  store_embeddings.rs  store_file.rs  store_project.rs  store_query.rs  store_session.rs  store_stats.rs
crates/srag-core/src/ipc/: client.rs  lifecycle.rs  mod.rs  protocol.rs
crates/srag-core/src/query/: context.rs  mod.rs  prompt.rs  retriever.rs
crates/srag-core/src/resource/: mod.rs
crates/srag-core/src/watcher/: mod.rs
python/: pyproject.toml
python/srag_ml/: __main__.py  api_client.py  embedder.py  llm.py  models.py  reranker.py  secrets.py  server.py
python/tests/: __init__.py  mock_responses.py  test_api_client.py  test_embedder.py  test_llm.py  test_models.py  test_reranker.py  test_secrets.py  test_server.py
tests/integration/: test_auto_index.sh  test_installed.sh  test_real_codebase.sh
